js file type module

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         voluptatem!
       </p>
     </section>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
   </body>
 </html>
